--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     clicks: 0,
     maxClicks: 12 // before it disappears
 });</pre></p>
-	<p>The state of an existing button can be manipulated in the browser's console.<pre>demo.model[0].clicks = 8;</pre> although, if the value is smaller or as big as the current value, an error will be shown in the console of the browser.</p>
+	<p>The state of an existing button can be manipulated in the browser's console.<pre>demo.model[0].clicks = 8;</pre> which will be immediately reflected in the view although, if the value is smaller or as big as the current value, an error will be shown in the console of the browser.</p>
 	<p>The states of the buttons are stored in the local storage and are restored on a new page request (refresh page).</p>
 	<p>With this demo, the comments inside demo.js and the documentation it should be easily possible to understand VOM and how it could be used for MVC patterns.</p>
 	<script type="text/javascript" src="VOM.js"></script>
