changes todo app

--- a/todo/index.html
+++ b/todo/index.html
@@ -16,9 +16,7 @@
 		<section class="todoapp">
 			<header class="header">
 				<h1>todos</h1>
-				<form>
-					<input class="new-todo" placeholder="What needs to be done?" autofocus>
-				</form>
+				<input class="new-todo" placeholder="What needs to be done?" autofocus>
 			</header>
 			<section class="main">
 				<input class="toggle-all" id="toggle-all" type="checkbox">
@@ -51,7 +49,7 @@
 				<input class="toggle" type="checkbox"{{toggled}}>
 				<label>{{text}}</label>
 				<button class="destroy"></button>
-				<form><input class="edit" value="{{text}}"></form>
+				<input class="edit" value="{{text}}">
 			</li>
 		</script>
 		<script type="text/javascript" src="../VOM.js"></script>
