--- a/todo/index.html
+++ b/todo/index.html
@@ -53,7 +53,7 @@
 			</li>
 		</script>
 		<script type="text/javascript" src="../VOM.js"></script>
-		<script type="text/javascript" src="../template.js"></script>
+		<script type="text/javascript" src="template.js"></script>
 		<script type="text/javascript" src="app.js"></script>
 	</body>
 </html>
